// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhotoShowcaseRaw /> Should not render the gallery when images are empty 1`] = `
Array [
  "0",
  <div
    className="sc-bwzfXH gQlPco"
  >
    <ul
      className="pagination"
    >
      <li
        className="previous disabled"
      >
        <a
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          previous
        </a>
      </li>
      <li
        className="active"
      >
        <a
          aria-current="page"
          aria-label="Page 1 is your current page"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          1
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          2
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          3
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          4
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          5
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          6
        </a>
      </li>
      <li
        className="break-me"
      >
        <a
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          ...
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 9"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          9
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 10"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          10
        </a>
      </li>
      <li
        className="next"
      >
        <a
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          next
        </a>
      </li>
    </ul>
  </div>,
]
`;

exports[`<PhotoShowcaseRaw /> Should render pagination when there is more than 1 page of images 1`] = `
Array [
  <div
    className="sc-bdVaJa fQoLLz"
  >
    <div
      className="ReactGridGallery"
      id="ReactGridGallery"
    >
      <iframe
        style={
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "height": 0,
            "margin": 0,
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "width": "100%",
          }
        }
      />
    </div>
  </div>,
  <div
    className="sc-bwzfXH gQlPco"
  >
    <ul
      className="pagination"
    >
      <li
        className="previous disabled"
      >
        <a
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          previous
        </a>
      </li>
      <li
        className="active"
      >
        <a
          aria-current="page"
          aria-label="Page 1 is your current page"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          1
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          2
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          3
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          4
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          5
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          6
        </a>
      </li>
      <li
        className="break-me"
      >
        <a
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          ...
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 9"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          9
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 10"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          10
        </a>
      </li>
      <li
        className="next"
      >
        <a
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          next
        </a>
      </li>
    </ul>
  </div>,
]
`;

exports[`<PhotoShowcaseRaw /> Should render the gallery when images are present 1`] = `
Array [
  <div
    className="sc-bdVaJa fQoLLz"
  >
    <div
      className="ReactGridGallery"
      id="ReactGridGallery"
    >
      <iframe
        style={
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "height": 0,
            "margin": 0,
            "overflow": "hidden",
            "padding": 0,
            "position": "fixed",
            "width": "100%",
          }
        }
      />
    </div>
  </div>,
  <div
    className="sc-bwzfXH gQlPco"
  >
    <ul
      className="pagination"
    >
      <li
        className="previous disabled"
      >
        <a
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          previous
        </a>
      </li>
      <li
        className="active"
      >
        <a
          aria-current="page"
          aria-label="Page 1 is your current page"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          1
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 2"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          2
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 3"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          3
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 4"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          4
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 5"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          5
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 6"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          6
        </a>
      </li>
      <li
        className="break-me"
      >
        <a
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          ...
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 9"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          9
        </a>
      </li>
      <li>
        <a
          aria-current={null}
          aria-label="Page 10"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          10
        </a>
      </li>
      <li
        className="next"
      >
        <a
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          next
        </a>
      </li>
    </ul>
  </div>,
]
`;
